--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-kit-react",
+  "name": "personal-website",
   "version": "1.8.0",
-  "description": "Material Kit React. Coded by Creative Tim",
+  "description": "Personal Website",
   "private": true,
   "main": "dist/index.js",
   "dependencies": {
